# relay

./: .gitignore  AGENTS.md  Procfile  README.md  pyproject.toml  render.yaml
.githooks/: pre-push
.github/workflows/: ci.yml  pages.yml
dashboard/: README.md  index.html  relay-demo.js  report-data.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTION-SHAPES.md  DEMO.md  HONESTY.md  METRICS.md  SAFETY.md  THREAT-MODEL.md
relay/: __init__.py  actions.py  agent.py  audit.py  brain.py  cli.py  domain.py  grounding.py  metrics.py  observability.py  policy.py  proposal.py  service.py  store.py  stripe_store.py
relay/data/: golden_tickets.json
relay/eval/: __init__.py  golden.py  harness.py  report.py
results/demo/: audit.jsonl  eval-report.json  eval-report.md
schema/: run-report-v1.json
scripts/: build_dashboard_data.py  check_js_parity.py  leakgate.py  verify_candidate_cases.py
tests/: test_agent.py  test_audit.py  test_brain.py  test_cli.py  test_domain.py  test_eval.py  test_grounding.py  test_metrics.py  test_policy.py  test_service.py  test_store.py  test_stripe_store.py
