[project]
name = "relay-agent"
version = "0.1.0"
description = "A safe autonomous customer-support agent: reads billing state, acts only on policy-match, escalates instead of guessing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Relay contributors" }]
keywords = [
    "customer-support",
    "ai-agent",
    "llm",
    "guardrails",
    "fail-closed",
    "deflection",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
# The real Claude brain. CI and the offline demo run on the deterministic
# MockBrain and never import anthropic, so the test suite needs no API key.
llm = ["anthropic>=0.92"]
# HTTP service surface.
service = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
# Real Stripe billing adapter. The deterministic in-memory store is the default
# and needs none of this.
stripe = ["stripe>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",          # FastAPI TestClient
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.92",
]

[project.scripts]
relay = "relay.cli:main"

[project.urls]
Homepage = "https://github.com/fetchrn/relay"
Repository = "https://github.com/fetchrn/relay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["relay"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["relay", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "B008",  # FastAPI uses function calls in argument defaults (Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
# anthropic / fastapi / stripe are optional extras; don't fail the strict gate
# when they're absent from the analysis environment.
ignore_missing_imports = true
files = ["relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
